레이아웃 구현 소스 변경

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>index</title>
+  <title>안녕하세요 김현선입니다</title>
 
   <link rel="stylesheet" href="src/css/reset.css">
   <link rel="stylesheet" href="src/css/index.css">
@@ -19,15 +19,15 @@
 
   <!-- 섹션 -->
   <section>
-    <p>프론트 삐약이 현선이가 만든
+    <p>백엔드 삐약이가 만들어가는
       <br>프로젝트 전용 사이트
     </p>
     <button><a href="portfolio.html">PORTFOLIO</a></button>
     <ul>
       <li><a href="https://github.com/GDana" target="_blank" class="link-grid">GIT</a></li>
       <li><a href="https://medium.com/gdana" target="_blank" class="link-grid">BLOG</a></li>
-      <!-- <li><a href="mailto:danmi2857@naver.com" target="_blank" class="link-grid">EMAIL</a></li> -->
-      <li><a href="board.html" target="" class="link-grid">BOARD</a></li>
+      <li><a href="mailto:gdanaaat@gmail.com" target="_blank" class="link-grid">EMAIL</a></li> 
+      <!-- <li><a href="board.html" target="" class="link-grid">BOARD</a></li>-->
     </ul>
   </section>
 </div>
