--- a/portfolio.html
+++ b/portfolio.html
@@ -28,81 +28,75 @@
     <section>
       <div class="area-contents">
         <!-- contents: 실질적인 컨텐츠 영역, grid로 영역 나눔 -->
-        <div class="contents">
-          <!-- 1행: 좌 이미지, 우 설명 -->
-          <div class="item scroll #pj01">
-              <img class="img item01" src="src/images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-          </div>
-          <div class="item info_right">
-            <h3>개인 프로젝트<span class="font-en">(1)</span>
-              <a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a>
-            </h3>
-            <div class="line_item01"></div>
-            <p>작업한 프로젝트들을 소개할 프로젝트용 사이트입니다.</p>
-            <ul>
-              <li class="font-bold">프로젝트 기간</li>
-              <li class="font-noletter font-en">2019.01.23 ~ 2020.01.27</li>
-              <li class="font-bold">기술 스택</li>
-              <li class="font-noletter font-en">HTML5, CSS3, Javascript, React</li>
-            </ul>
-          </div>
-          <!-- 2행: 좌 설명, 우 이미지 -->
-          <div class="item info_left">
-            <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a> 팀 프로젝트<span class="font-en">(1)</span></h3>
-            <div class="line_item02"></div>
-            <p>국비과정에서 5명이 한팀을 이루어 작업한 서비스입니다.</p>
-            <ul>
-              <li class="font-bold">프로젝트 기간</li>
-              <li class="font-noletter font-en">2020.03.23 ~ 2020.06.03</li>
-              <li class="font-bold">기술 스택</li>
-              <li class="font-noletter font-en">Javascript, Java, Spring, SQL</li>
-            </ul>
-          </div>
-          <div class="item scroll #pj02">
-            <img class="img item02" src="src/images/cat(28).jpg" alt="cat(3)" width="600px" height="550px">
-          </div>
-          <!-- 3행: 좌 이미지, 우 설명 -->
-          <div class="item scroll #pj03">
-            <img class="img item03" src="src/images/cat(27).jpg" alt="cat(3)" width="600px" height="550px">
-          </div>
-          <div class="item info_right">
-            <h3>개인 프로젝트<span class="font-en">(2)</span>
-              <a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a>
-            </h3>
-            <div class="line_item03"></div>
-            <p><span class="font-en">Vingle</span> 서비스를 모방한 사이트로 리액트를 기반으로 만들었습니다.</p>
-            <ul>
-              <li class="font-bold">프로젝트 기간</li>
-              <li class="font-noletter font-en">2020.05.01 ~ 2020.05.31</li>
-              <li class="font-bold">기술 스택</li>
-              <li class="font-noletter font-en">Javascript, React, Node.js, MongoDB</li>
-            </ul>
-          </div>
-          <!-- 4행: 좌 설명, 우 이미지 -->
-          <div class="item info_left">
-            <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a> 팀 프로젝트<span class="font-en">(2)</span></h3>
-            <div class="line_item04"></div>
-            <p>인천, 부천 사는 웹개발자들 커뮤니티에서 수익을 위한 서비스를 개발한 사이트입니다.</p>
-            <ul>
-              <li class="font-bold">프로젝트 기간</li>
-              <li class="font-noletter font-en">2020.01.19 ~ 2020.04.30</li>
-              <li class="font-bold">기술 스택</li>
-              <li class="font-noletter font-en">Javascript, Java, Spring</li>
-            </ul>
-          </div>
-          <div class="item scroll #pj04">
-            <img class="img item04" src="src/images/cat(11).jpg" alt="cat(3)" width="600px" height="550px">
-          </div>
-        </div>
+        <ul class="contents">
+          <li>
+            <div class="con-img scroll #pj01">
+              <div>
+                <img src="src/images/포폴1-1.png">
+                <img src="src/images/포폴1-2.png">
+              </div>              
+            </div>
+            <div class="con-text">
+              <div class="item info_right">
+                <h3>KIC 팀 프로젝트
+                  <a href="#" target="_blank"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a>
+                  <a href="https://github.com/GDana/geist" target="_blank"><img src="src/images/github.png" alt="link" width="20px" height="20px" class="img-link"></a>
+                </h3>
+                <p>가상의 GEIST 회사의 인사, 근태, 결재, 공지 등의 관리 사이트를 개발</p>
+                <ul>
+                  <li class="font-bold"><h4>프로젝트 기간</h4></li>
+                  <li>2020.03.09 ~ 2020.05.31</li>
+                  <li class="font-bold"><h4>개발 도구</h4></li>
+                  <li>HTML5, CSS3, Javascript, jQuery, Bootstrap, Ajax</li>
+                  <li>Java 8, Oracle 11g, JSP, Git</li>
+                  <li class="font-bold"><h4>담당 역할</h4></li>
+                  <li>결재, 주소록, 마이페이지 백엔드 개발</li>
+                  <li>결재, 주소록 Ajax 구현</li>
+                  <li>팀의 작업현황을 노션으로 기록 및 공유
+                    <a href="https://bit.ly/2YyRxs1" target="_blank"><img src="src/images/link.png" alt="link" width="15px" height="15px" class="img-link"></a>
+                    <!-- <a href="https://bit.ly/2YyRxs1" target="_blank" style="color: #81665C; font-weight: bold; font-size: 14px;">(공유링크)</a>
+                    -->
+                  </li>
+                  <li>전반적인 프론트, 백엔드 이슈 해결</li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="con-text">
+              <div class="item info_left">
+                <h3>
+                  <a href="https://github.com/GDana/gdana.github.io" target="_blank"><img src="src/images/github.png" alt="link" width="20px" height="20px" class="img-link"></a>
+                  <a href="https://gdana.github.io" target="_blank"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a>
+                  프론트 개인 프로젝트</h3>
+                <p>프로젝트 업로드 목적을 위한 프론트엔드 개인 프로젝트</p>
+                <ul>
+                  <li class="font-bold"><h4>프로젝트 기간</h4></li>
+                  <li>2019.12.18 ~ 2019.12.30</li>
+                  <li class="font-bold"><h4>개발 도구</h4></li>
+                  <li>HTML5, CSS3, Javascript, jQuery</li>
+                  <li class="font-bold"><h4>담당 역할</h4></li>
+                  <li>화면 기획 및 디자인</li>
+                  <li>마크업, 스크립트</li>
+                </ul>
+              </div>
+            </div>
+            <div class="con-img scroll #pj02">
+              <div>
+                <img src="src/images/포폴2-1.png">
+                <img src="src/images/포폴2-2.png">
+              </div>
+            </div>
+          </li>
+        </ul>
+        <!-- end : contents -->
       </div>
       <!-- 네비게이션 -->
       <nav>
         <div class="area-navi">
           <ul>
-            <li class="m"><a href="#pj01" class="menu01">개인 프로젝트<span class="font-en">(1)</span></a></li>
-            <li class="m"><a href="#pj02" class="menu02">팀 프로젝트<span class="font-en">(1)</span></a></li>
-            <li class="m"><a href="#pj03" class="menu03">개인 프로젝트<span class="font-en">(2)</span></a></li>
-            <li class="m"><a href="#pj04" class="menu04">팀 프로젝트<span class="font-en">(2)</span></a></li>
+            <li class="m"><a href="#pj01" class="menu01">KIC 팀 프로젝트</a></li>
+            <li class="m"><a href="#pj02" class="menu02">프론트 개인 프로젝트</a></li>
           </ul>
           <div>
             <button><a href="index.html" class="btn-goTomain">MAIN</a></button>
@@ -122,60 +116,7 @@
         </ul> -->
         <p><i>Dev by &#10084; dana</i></p>
     </footer>
-
-    <!-- 슬라이드 & 레이어 팝업 -->
-    <div class="area-popup">
-      <div class="closeBtn"></div>
-      <!-- 슬라이드01 -->
-      <div class="slide-item01">
-        <div class="area-slide">
-          <div class="inArea-slide">
-            <ul class="slider">
-              <li data-color="#1abc9c">
-                <img src="src/images/cat(28).jpg">
-              </li>
-              <li data-color="#3498db">
-                <img src="src/images/cat(27).jpg">
-              </li>
-              <li data-color="#9b59b6">
-                <img src="src/images/cat(16).jpg">
-              </li>
-              <li data-color="#34495e">
-                <img src="src/images/cat(11).jpg">
-              </li>
-              <li data-color="#e74c3c">
-                <img src="src/images/cat(3).jpg">
-              </li>
-            </ul>
-      
-            <!--controls-->
-            <div class="btns next">
-              <i class="fa fa-arrow-right"></i>
-            </div>
-            <div class="btns previous">
-              <i class="fa fa-arrow-left"></i>
-            </div>
-            <div class="counter"></div>
-            <div class="pagination-wrap"><ul></ul></div>
-            <!--controls-->
-          </div>
-        </div>
-      </div>
-      <!-- 슬라이드02 -->
-      <div class="slide-item02">
-        <h1>slide02</h1>
-      </div>
-      <!-- 슬라이드03 -->
-      <div class="slide-item03">
-        <h1>slide03</h1>
-      </div>
-      <!-- 슬라이드04 -->
-      <div class="slide-item04">
-        <h1>slide04</h1>
-      </div>
-    </div>
   </div>
   <script src="src/js/scroll.js"></script>
-  <script src="src/js/slidePopup.js"></script>
 </body>
 </html>
