--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             <div class="con-text">
               <div class="item info_right">
                 <h3>KIC 팀 프로젝트
-                  <a href="#" target="_blank"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a>
+                  <!-- <a href="#" target="_blank"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="img-link"></a> -->
                   <a href="https://github.com/GDana/geist" target="_blank"><img src="src/images/github.png" alt="link" width="20px" height="20px" class="img-link"></a>
                 </h3>
                 <p>가상의 GEIST 회사의 인사, 근태, 결재, 공지 등의 관리 사이트를 개발</p>
