--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <link rel="stylesheet" href="src/css/reset.css">
   <link rel="stylesheet" href="src/css/index.css">
+  
+  <script src="./src/js/jspdf.min.js"></script>
+  <script src="./src/js/bluebird.min.js"></script>
+  <script src="./src/js/html2canvas.min.js"></script>
+  
 </head>
 <body>
 <div class="wrapper">
@@ -31,5 +36,50 @@
     </ul>
   </section>
 </div>
+<script>
+function pdfPrint(){
+
+  console.log("pdfPrint()")
+    // 현재 document.body의 html을 A4 크기에 맞춰 PDF로 변환
+    html2canvas(document.body, {
+        onrendered: function (canvas) {
+
+            // 캔버스를 이미지로 변환
+            var imgData = canvas.toDataURL('image/png');
+
+            var imgWidth = 210; // 이미지 가로 길이(mm) A4 기준
+            var pageHeight = imgWidth * 1.414;  // 출력 페이지 세로 길이 계산 A4 기준
+            var imgHeight = canvas.height * imgWidth / canvas.width;
+            var heightLeft = imgHeight;
+
+            var doc = new jsPDF('p', 'mm');
+            var position = 0;
+
+            // 첫 페이지 출력
+            doc.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+            heightLeft -= pageHeight;
+
+            // 한 페이지 이상일 경우 루프 돌면서 출력
+            while (heightLeft >= 20) {
+                position = heightLeft - imgHeight;
+                doc.addPage();
+                doc.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+                heightLeft -= pageHeight;
+            }
+
+            // 파일 저장
+            doc.save('sample.pdf');
+
+
+            //이미지로 표현
+            //document.write('<img src="'+imgData+'" />');
+        }            
+    });        
+}
+
+window.onload = function(){
+    pdfPrint();
+}
+</script>
 </body>
 </html>
