--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="logo"></div>
     <h1>GDANA</h1>  
   </header>
+  
+  <input type="button" value="인쇄하기" id="print" onclick="window.print()"/>
+  <input type="button" value="PDF 다운로드" id="print" onclick="pdfPrint()"/>
 
   <!-- 섹션 -->
   <section>
@@ -77,9 +80,6 @@ function pdfPrint(){
     });        
 }
 
-window.onload = function(){
-    pdfPrint();
-}
 </script>
 </body>
 </html>
